Support Java 25 with FIPS enabled Closes #45906
Signed-off-by: rmartinc <rmartinc@redhat.com>